@@ -1,3 +1,13 @@
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/bits/local_lim.h (PTHREAD_THREADS_MAX):
+	Bump to 16384.
+	* manager.c (__pthread_handles): Remove.
+	* pthandles.c: New file.
+	* pthread.c (__pthread_initialize_minimal): Initialize
+	__pthread_handles[0] and __pthread_handles[1].
+	* Makefile (libpthread-routines): Add pthandles (must be last).
+
 2002-08-26 Brian Youmans <3diff@gnu.org>
 
 	* Examples/ex10.c: Corrected version number in Lesser GPL copying
